--- a/src/main.css
+++ b/src/main.css
@@ -10,8 +10,17 @@
 
 body {
   height: 100vh;
+  font-family: "Lexend", sans-serif;
 }
 
 #root {
   height: 100vh;
+}
+
+:root {
+  --ice-blue: #ecf7fd;
+  --grey-blue: #f5fbff;
+  --white-blue: #f9feff;
+  --light-grey: #d9d9d9;
+  --off-white: #f7fafb;
 }
